Revision history for HTML::Mason.

An HTML version of this file, complete with links to documentation, is
available at http://www.masonhq.com/code/history.html.

** denotes an incompatible change

1.22  July 14, 2003

[ ENHANCEMENTS ]

- Comments are now allowed on separate lines inside <%attr> and
<%flags> blocks.  Task id #475.
- Documented potential problems if call to $m->redirect is trapped in
an eval block, and then output is generated before the exception is
rethrown.  Task id #477.

[ BUG FIXES ]

- If a component with a filter section called abort, the filter was
run twice.  Task id #473.
- If an exception was thrown when creating a request, memory was
leaked.  This can happen when the top-level component cannot be
found (e.g. 404) or if there is an error in compiling the top-level
component. Task id #478. Reported by Doug Treder.
- Removed the use of alarm() and SIG{ALRM} to trap rare infinite loops
inside the compilation of components. It interfered with Mason
environments that use alarm() for their own purposes, and the
associated test would crash in certain Perl environments. If you find
that Mason sometimes enters an infinite loop, see the
"Hanging Processes: Detection and Diagnostics" section of the mod_perl
guide for hints on diagnosing the problem.  Task id #472.
- Mason allowed a component to define two subcomponents or methods
with the same name.  Task id #476.  Reported by John Michael Mars.


1.21  June 4, 2003

[ INCOMPATIBLE CHANGES ]

** The semantics of @_ for components now match Perl subroutines: @_
contains aliases to the caller's arguments, instead of copies.  For
example, if a component updates $_[0], the corresponding argument is
updated (or an error occurs if it is not updatable). The only users
that will notice this are those that update elements of @_ in
components and do not expect those changes to affect the caller. If
you have any doubts, grep your component tree for '\$_\[' and look for
assignment statements.

[ ENHANCEMENTS ]
